--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "serve-static": ">=1",
     "qs": ">=0.5.3",
     "url": ">=0.7.9",
-    "mu2": ">=0.5.17"
+    "mu2": ">=0.5.17",
+    "http-auth": "^3.2.3"
   },
   "engines": {
     "node": ">= 0.8.0"
