--- a/settings.json
+++ b/settings.json
@@ -6,5 +6,9 @@
 	"template":			"default.template",
 	"home_template":	"home.template",
 	"html_title":		"Trello burndown chart generator",
-	"html_header":		"Burndown for sprint "
+	"html_header":		"Burndown for sprint ",
+
+	"useHttpAuth": 		true,
+	"httpUsername": 	"-- insert username --",
+	"httpPassword": 	"-- insert password --"
 }
