--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   },
   "engines": {
     "node": ">= 0.8.0"
+  },
+  "scripts": {
+    "postinstall": "cp node_modules/xcharts/build/xcharts.min.* static/"
   }
 }
