--- a/templates/default.template
+++ b/templates/default.template
@@ -10,7 +10,7 @@
 		<title>{{title}}</title>
 		<meta name="viewport" content="width=device-width">
 
-		<link rel="stylesheet" href="../node_modules/xcharts/build/xcharts.min.css">
+		<link rel="stylesheet" href="/static/xcharts.min.css">
 		<link rel="stylesheet" href="/static/default.css">
 		<link href="/static/bootstrap.min.css" rel="stylesheet">
 
@@ -22,7 +22,7 @@
 
 		<script src="/static/d3.v3.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="../node_modules/xcharts/build/xcharts.min.js"></script>
+		<script src="/static/xcharts.min.js"></script>
 		<script src="/static/bootstrap.min.js"></script>
 	</head>
 	<body>
